# strawberry-django-social-auth

./: .gitignore  404.html  CHANGELOG.md  Makefile  README.md  RELEASE.md  index.html  key.json  mkdocs.yaml  pre_build.py  pyproject.toml  setup.py  sitemap.xml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: gh-pages.yml  mypy.yml  push.yaml  release.yaml  release.yml  release_check.yml  release_steps.yml  tests.yml
.github/workflows/steps/: mypy.yml  release_check.yml  tests.yml
api/: index.html
changelog/: index.html
contributing/: index.html
contributors/: index.html
docs/: api.md  contributing.md  contributors.md  index.md  pre_build.py  requirements.txt
gql_social_auth/: constants.py  decorators.py  mixins.py  mutations.py  pipeline.py  types.py
search/: search_index.json
testproject/: asgi.py  schema.py  settings.py  urls.py
tests/: conftest.py  settings.py  test_mixins.py  test_social_auth.py  test_utils.py  testcases.py
